# AboutData

./: .gitignore  CMakeLists.txt  README.md  sqlmodels.qrc
src/: CMakeLists.txt  main.cpp
src/DMMS/: CMakeLists.txt
src/UI/: Main.qml
